--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </header>
     <header id="job">
       <div class="container-fluid row">
-        <div class="col-lg-4 job-search">
-          <div style="float:left;width:300px;">
+        <div class="col-lg-3 col-md-3 col-sm-12 job-search">
+          <div>
             <div id="accordion">
               <ul>
                 <li class="li">
@@ -52,7 +52,7 @@
                   </div>
                   <ul>
                     <li><a href="?11"> 
-                        <input type="text" placeholder="Enter Your Location to search"></a></li>
+                        <input class="location" type="text" placeholder="Enter Your Location to search"></a></li>
                   </ul>
                 </li>
                 <li class="li">
@@ -60,24 +60,27 @@
                     <p class="p">Job Function<i class="fas fa-plus"></i></p>
                   </div>
                   <ul>
-                    <li>
-                      <input type="checkbox" name="all" value="all">  All
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Administrative
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Advocacy
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Community Engagement/Outreach
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Development/Fundraising
-                    </li>
-                    <li> 
-                      <input type="checkbox" name="vehicle1" value="Bike">  Program Management
-                    </li>
+                    <li><a href="?21"> 
+                        <ul>
+                          <li>
+                            <input type="checkbox" name="all" value="all">  All
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  Administrative
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  Advocacy
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  Community Engagement/Outreach
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  Development/Fundraising
+                          </li>
+                          <li> 
+                            <input type="checkbox" name="vehicle1" value="Bike">  Program Management
+                          </li>
+                        </ul></a></li>
                   </ul>
                 </li>
                 <li class="li">
@@ -85,24 +88,27 @@
                     <p class="p">Issue Areas<i class="fas fa-plus"></i></p>
                   </div>
                   <ul>
-                    <li>
-                      <input type="checkbox" name="all" value="all">  All
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Children & Youth
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Community Development
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Education
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Health & Medicine
-                    </li>
-                    <li> 
-                      <input type="checkbox" name="vehicle1" value="Bike">  Volunteering
-                    </li>
+                    <li><a href="?31"> 
+                        <ul>
+                          <li>
+                            <input type="checkbox" name="all" value="all">  All
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  Children & Youth
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  Community Development
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  Education
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  Health & Medicine
+                          </li>
+                          <li> 
+                            <input type="checkbox" name="vehicle1" value="Bike">  Volunteering
+                          </li>
+                        </ul></a></li>
                   </ul>
                 </li>
                 <li class="li">
@@ -110,24 +116,27 @@
                     <p class="p">Education Level<i class="fas fa-plus"></i></p>
                   </div>
                   <ul>
-                    <li>
-                      <input type="checkbox" name="all" value="all">  All
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  2-Year Degree Required
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  4-Year Degree Required
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Doctorate (PhD) Required
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  High School Diploma Required
-                    </li>
-                    <li> 
-                      <input type="checkbox" name="vehicle1" value="Bike">  J.D. Required 
-                    </li>
+                    <li><a href="?41"> 
+                        <ul>
+                          <li>
+                            <input type="checkbox" name="all" value="all">  All
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  2-Year Degree Required
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  4-Year Degree Required
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  Doctorate (PhD) Required
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  High School Diploma Required
+                          </li>
+                          <li> 
+                            <input type="checkbox" name="vehicle1" value="Bike">  J.D. Required 
+                          </li>
+                        </ul></a></li>
                   </ul>
                 </li>
                 <li class="li">
@@ -135,24 +144,27 @@
                     <p class="p">Professional Level<i class="fas fa-plus"></i></p>
                   </div>
                   <ul>
-                    <li>
-                      <input type="checkbox" name="all" value="all">  All
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Entry level
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Executive
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Managerial
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  None specified
-                    </li>
-                    <li> 
-                      <input type="checkbox" name="vehicle1" value="Bike">  Professional
-                    </li>
+                    <li><a href="?51"> 
+                        <ul>
+                          <li>
+                            <input type="checkbox" name="all" value="all">  All
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  Entry level
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  Executive
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  Managerial
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  None specified
+                          </li>
+                          <li> 
+                            <input type="checkbox" name="vehicle1" value="Bike">  Professional
+                          </li>
+                        </ul></a></li>
                   </ul>
                 </li>
                 <li class="li">
@@ -160,15 +172,18 @@
                     <p class="p">Full Time / Part Time<i class="fas fa-plus"></i></p>
                   </div>
                   <ul>
-                    <li>
-                      <input type="checkbox" name="all" value="all">  All
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Full Time 
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Part Time
-                    </li>
+                    <li><a href="?61"> 
+                        <ul> 
+                          <li>
+                            <input type="checkbox" name="all" value="all">  All
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  Full Time 
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  Part Time
+                          </li>
+                        </ul></a></li>
                   </ul>
                 </li>
                 <li class="li">
@@ -176,15 +191,18 @@
                     <p class="p">Remote / On-Site<i class="fas fa-plus"></i></p>
                   </div>
                   <ul>
-                    <li>
-                      <input type="checkbox" name="all" value="all">  All
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Remote 
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  On-Site
-                    </li>
+                    <li><a href="?71"> 
+                        <ul> 
+                          <li>
+                            <input type="checkbox" name="all" value="all">  All
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  Remote 
+                          </li>
+                          <li>
+                            <input type="checkbox" name="vehicle1" value="Bike">  On-Site
+                          </li>
+                        </ul></a></li>
                   </ul>
                 </li>
                 <li class="li">
@@ -192,27 +210,104 @@
                     <p class="p">Org Type<i class="fas fa-plus"></i></p>
                   </div>
                   <ul>
-                    <li>
-                      <input type="checkbox" name="all" value="all">  All
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Consultant
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Government
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Nonprofit
-                    </li>
-                    <li>
-                      <input type="checkbox" name="vehicle1" value="Bike">  Recruiter
-                    </li>
-                    <li> 
-                      <input type="checkbox" name="vehicle1" value="Bike">  Social Enterprise  
-                    </li>
+                    <li><a href="?18"> 
+                        <ul>
+                          <li></li>
+                          <input type="checkbox" name="all" value="all">  All
+                        </ul>
+                        <li>
+                          <input type="checkbox" name="vehicle1" value="Bike">  Consultant
+                        </li>
+                        <li>
+                          <input type="checkbox" name="vehicle1" value="Bike">  Government
+                        </li>
+                        <li>
+                          <input type="checkbox" name="vehicle1" value="Bike">  Nonprofit
+                        </li>
+                        <li>
+                          <input type="checkbox" name="vehicle1" value="Bike">  Recruiter
+                        </li>
+                        <li> 
+                          <input type="checkbox" name="vehicle1" value="Bike">  Social Enterprise  
+                        </li></a></li>
                   </ul>
                 </li>
               </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-8 col-md-8 col-sm-12 job-body">
+          <div class="row"> 
+            <div class="col-lg-12 job-find-header">
+              <p class="number">7,614 jobs found</p><a class="alert" href="#"><i class="far fa-bell">        Create an Email Alert</i></a>
+            </div>
+            <div class="find-job col-lg-12">
+              <div class="row">
+                <div class="job-header col-12">
+                  <div class="left"> <i class="fas fa-briefcase">   JOB</i></div>
+                  <div class="save"> <i class="fas fa-heart">   SAVE</i></div>
+                </div>
+                <div class="job-title col-12">
+                  <h4>Vacancy for Data entry clerk</h4>
+                </div>
+                <div class="job-location col-12">
+                  <h5>Mercy Ships Organization | Los Angeles, CA</h5>
+                </div>
+                <div class="job-descraption col-12">
+                  <h6>Posted 2 minutes ago | Full Time | Remote Possible</h6>
+                </div>
+              </div>
+            </div>
+            <div class="find-job col-lg-12">
+              <div class="row">
+                <div class="job-header col-12">
+                  <div class="left"> <i class="fas fa-briefcase">   JOB</i></div>
+                  <div class="save"> <i class="fas fa-heart">   SAVE</i></div>
+                </div>
+                <div class="job-title col-12">
+                  <h4>Vacancy for Data entry clerk</h4>
+                </div>
+                <div class="job-location col-12">
+                  <h5>Mercy Ships Organization | Los Angeles, CA</h5>
+                </div>
+                <div class="job-descraption col-12">
+                  <h6>Posted 2 minutes ago | Full Time | Remote Possible</h6>
+                </div>
+              </div>
+            </div>
+            <div class="find-job col-lg-12">
+              <div class="row">
+                <div class="job-header col-12">
+                  <div class="left"> <i class="fas fa-briefcase">   JOB</i></div>
+                  <div class="save"> <i class="fas fa-heart">   SAVE</i></div>
+                </div>
+                <div class="job-title col-12">
+                  <h4>Vacancy for Data entry clerk</h4>
+                </div>
+                <div class="job-location col-12">
+                  <h5>Mercy Ships Organization | Los Angeles, CA</h5>
+                </div>
+                <div class="job-descraption col-12">
+                  <h6>Posted 2 minutes ago | Full Time | Remote Possible</h6>
+                </div>
+              </div>
+            </div>
+            <div class="find-job col-lg-12">
+              <div class="row">
+                <div class="job-header col-12">
+                  <div class="left"> <i class="fas fa-briefcase">   JOB</i></div>
+                  <div class="save"> <i class="fas fa-heart">   SAVE</i></div>
+                </div>
+                <div class="job-title col-12">
+                  <h4>Vacancy for Data entry clerk</h4>
+                </div>
+                <div class="job-location col-12">
+                  <h5>Mercy Ships Organization | Los Angeles, CA</h5>
+                </div>
+                <div class="job-descraption col-12">
+                  <h6>Posted 2 minutes ago | Full Time | Remote Possible</h6>
+                </div>
+              </div>
             </div>
           </div>
         </div>
