--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
                 </div>
               </div>
             </div>
+            <div class="btn btn-primary">view more</div>
           </div>
         </div>
       </div>
