--- a/index.html
+++ b/index.html
@@ -14,30 +14,30 @@
             <h3>Job</h3></a>
           <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item active"><a class="nav-link" href="#about">Tech Careers </a></li>
-              <li class="nav-item"><a class="nav-link" href="#downloads">Career Explorer </a></li>
-              <li class="nav-item"><a class="nav-link" href="#plans">Insights </a></li>
+              <li class="nav-item active"><a class="nav-link" href="#home">Tech Careers </a></li>
+              <li class="nav-item"><a class="nav-link" href="#companies">Companies </a></li>
+              <li class="nav-item"><a class="nav-link" href="#competition">Feature</a></li>
             </ul>
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item"><a class="nav-link" href="#contact">Contact Sales </a></li>
-              <li class="nav-item"><a class="nav-link" href="#about">For Employers  </a></li>
-              <li class="nav-item"><a class="nav-link" href="#downloads">Login/Register</a></li>
+              <li class="nav-item"><a class="nav-link" href="#job">For Employers  </a></li>
+              <li class="nav-item"><a class="nav-link" href="#footer">Contact Sales </a></li>
+              <li class="nav-item"><a class="nav-link" href="./login.html">Login/Register</a></li>
             </ul>
           </div>
         </nav>
-        <div class="sidenav" id="mySidenav"><a class="closebtn" href="" onclick="closeNav()">&times;</a><a class="nav-link" href="#">Tech Careers </a><a class="nav-link" href="#">Career Explorer</a><a class="nav-link" href="#">Insights </a><a class="nav-link" href="#">Contact Sales </a><a class="nav-link" href="#about">For Employers </a><a class="nav-link" href="#downloads">Login/Register</a></div><span class="open" style="font-size:30px;cursor:pointer; display:none;" onclick="openNav()">&#9776;</span>
-        <div class="overlay">
-          <div class="text-center header-body col-12">
-            <div class="form row text-center">
-              <div class="col-12 text-center text-header">
-                <h2>Search 78,263 tech jobs. Find yours today.</h2>
+        <div class="sidenav" id="mySidenav"><a class="closebtn" href="" onclick="closeNav()">&times; </a><a class="nav-link" href="#home">Tech Careers </a><a class="nav-link" href="#companies">Companies</a><a class="nav-link" href="#competition">Feature</a><a class="nav-link" href="#job">For Employers </a><a class="nav-link" href="#footer">Contact Sales </a><a class="nav-link" href="./login.html">Login/Register</a></div><span class="open" style="font-size:30px;cursor:pointer; display:none;" onclick="openNav()">&#9776;
+          <div class="overlay">
+            <div class="text-center header-body col-12">
+              <div class="form row text-center">
+                <div class="col-12 text-center text-header">
+                  <h2>Search 78,263 tech jobs. Find yours today.</h2>
+                </div>
+                <input class="col-lg-4 col-md-9 col-sm-9" type="text" placeholder="Job Title, Skills, Keywords or Company Name">
+                <input class="col-lg-4 col-md-9 col-sm-9" type="text" placeholder="Zip Code, City or State">
+                <button class="text-center search-btn btn">Search</button>
               </div>
-              <input class="col-lg-4 col-md-9 col-sm-9" type="text" placeholder="Job Title, Skills, Keywords or Company Name">
-              <input class="col-lg-4 col-md-9 col-sm-9" type="text" placeholder="Zip Code, City or State">
-              <button class="text-center search-btn btn">Search</button>
             </div>
-          </div>
-        </div>
+          </div></span>
       </div>
     </header>
     <header id="job">
