--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             </ul>
           </div>
         </nav>
-        <div class="sidenav" id="mySidenav"><a class="closebtn" href="" onclick="closeNav()">&times; </a><a class="nav-link" href="#home">Tech Careers </a><a class="nav-link" href="#companies">Companies</a><a class="nav-link" href="#competition">Feature</a><a class="nav-link" href="#job">For Employers </a><a class="nav-link" href="#footer">Contact Sales </a><a class="nav-link" href="./login.html">Login/Register</a></div><span class="open" style="font-size:30px;cursor:pointer; display:none;" onclick="openNav()">&#9776;
-          <div class="overlay">
-            <div class="text-center header-body col-12">
-              <div class="form row text-center">
-                <div class="col-12 text-center text-header">
-                  <h2>Search 78,263 tech jobs. Find yours today.</h2>
-                </div>
-                <input class="col-lg-4 col-md-9 col-sm-9" type="text" placeholder="Job Title, Skills, Keywords or Company Name">
-                <input class="col-lg-4 col-md-9 col-sm-9" type="text" placeholder="Zip Code, City or State">
-                <button class="text-center search-btn btn">Search</button>
+        <div class="sidenav" id="mySidenav"><a class="closebtn" href="" onclick="closeNav()">&times; </a><a class="nav-link" href="#home">Tech Careers </a><a class="nav-link" href="#companies">Companies</a><a class="nav-link" href="#competition">Feature</a><a class="nav-link" href="#job">For Employers </a><a class="nav-link" href="#footer">Contact Sales </a><a class="nav-link" href="./login.html">Login/Register</a></div><span class="open" style="font-size:30px;cursor:pointer; display:none;" onclick="openNav()">&#9776;</span>
+        <div class="overlay">
+          <div class="text-center header-body col-12">
+            <div class="form row text-center">
+              <div class="col-12 text-center text-header">
+                <h2>Search 78,263 tech jobs. Find yours today.</h2>
               </div>
+              <input class="col-lg-4 col-md-9 col-sm-9" type="text" placeholder="Job Title, Skills, Keywords or Company Name">
+              <input class="col-lg-4 col-md-9 col-sm-9" type="text" placeholder="Zip Code, City or State">
+              <button class="text-center search-btn btn">Search</button>
             </div>
-          </div></span>
+          </div>
+        </div>
       </div>
     </header>
     <header id="job">
